# BayesFM

./: DESCRIPTION  MD5  NAMESPACE  NEWS  NEWS.md  README  README.md  cleanup  configure  configure.ac
R/: BayesFM-package.R  BayesFM.R  HPPmodel.R  befa.R  extract.data.R  plot.befa.R  plot.simul.R.prior.R  plot.simul.nfac.prior.R  post.column.switch.R  post.sign.switch.R  print.befa.R  print.simul.R.prior.R  print.simul.nfac.prior.R  print.summary.befa.R  print.summary.simul.R.prior.R  print.summary.simul.nfac.prior.R  simul.R.prior.R  simul.dedic.facmod.R  simul.nfac.prior.R  summary.befa.R  summary.simul.R.prior.R  summary.simul.nfac.prior.R  utils.R  zzz.R
man/: BayesFM.Rd  HPPmodel.Rd  befa.Rd  plot.befa.Rd  post.column.switch.Rd  post.sign.switch.Rd  simul.R.prior.Rd  simul.dedic.facmod.Rd  simul.nfac.prior.Rd  summary.befa.Rd
src/: BayesFM-win.def  BayesFM.h  Makevars  befa.f90  befa.f95  covariates.f90  covariates.f95  covmat_block_invwishart.f90  covmat_block_invwishart.f95  factor_normal.f90  factor_normal.f95  factor_normal_block.f90  factor_normal_block.f95  global.f95  indicators_dedic.f90  indicators_dedic.f95  init.c  loading_idioprec.f90  loading_idioprec.f95  matrix.f90  matrix.f95  mcmc_progress.f90  mcmc_progress.f95  mda.f90  mda.f95  measurement.f90  measurement.f95  probability.f95  simul_nfac_prior.f90  simul_prior_nfac.f95
